force-app/main/default/objects/OMS_Cancel_Event__e.object
<CustomObject>
    <fields>
        <fullName>Cancel_Reason__c</fullName>
        <label>Cancel Reason</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Order_Item_Id__c</fullName>
        <label>Order Item Id</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <label>Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Recipient_Email__c</fullName>
        <label>Recipient Email</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shipping_Reduction__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Shipping Reduction</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>User_Name__c</fullName>
        <label>User Name</label>
        <length>55</length>
        <type>Text</type>
    </fields>
    <label>OMS Cancel Event</label>
    <pluralLabel>OMS Cancel Events</pluralLabel>
</CustomObject>